css/style.css
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body{
  margin: 20px 5%;
}

header{
  display: flex;
  width: 100%;
  height: 200px;
  /* background-color: rgb(48, 56, 175); */
  /* background-image: repeating-linear-gradient(40deg,rgb(48, 56, 175), #888 10% ); */
  background-image: url(../images/pavers.jpg);
  color: #fff;
  justify-content: space-around;
  align-items: flex-end;
}

h1{
  font-size: 40px;
  font-weight: bolder;
  align-self: center;
}

nav a{
  text-decoration: none;
  color: #fff;
  font-size: 120%;
}

nav a:hover{
  color: #B9F570;  
} 

nav ul{
  padding-bottom: 10px;
}

nav ul li{
  display: inline-flex;
  color: #fff;
  list-style: none;
  padding: 10px;
 }

nav ul li:last-child{
  margin-right: 20px;
}

/* .heroImage{
  height: 400px;
  background-color: #e5e5f7;
opacity: 0.8;
background-image:  repeating-radial-gradient( circle at 0 0, transparent 0, #e5e5f7 10px ), repeating-linear-gradient( #444cf755, #444cf7 );
} */

.aside-wrapper{
  display: flex;
  align-items: center;
  align-content: center;
}

.aside-wrapper img{
  max-width: 200px;
  max-height: 200px;
  display: inline-flex;
  margin: 15px;
  align-self: center;
}

#aboutMe{
  display: inline;
 
}

#aboutMe p{
  margin: 1.5em 0;
  line-height: 1.4;
}
/*

 .aboutMe{
  display: inline;
  margin: 10px;
  padding:5px;
  flex: 30;
  line-height: 1.2;
}

*/

.workHeader{
  font-weight: bold;
  font-size: 24px;
  margin: 5px 0;
}

.workImg{
  margin: 5px;
  padding: 5px;

}
.workImg:hover{
  opacity: .6;
  transform: scale(1.05);
}

.workTitle{
  font-weight: bold;
  margin-bottom: 5px;
  padding: 0px 5px;
  font-size: 90%;
  text-align: center;
}

.workCard{
  border: 2px solid black;
  display: flex;
  margin: 10px;
  flex-wrap: wrap;
  justify-content: space-evenly;
  align-items: center;
  gap: 10px;

}

footer{
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  height: 200px;
  /* background-image: repeating-linear-gradient(130deg,rgb(48, 56, 175), #888 10% ); */
  background-image: url(../images/pavers.jpg);
  justify-content: space-around; 
  align-items: center;
  color: #fff;
  flex-direction: column;
  margin-top: 5px;
}


footer ul li{
  display: inline-flex;
  margin: 0 5vw;
  font-size: 110%;
}

footer a{
  color: #fff;
  font-size: 110%;
  padding-left: 5px;
  text-decoration: none;
}


footer a:hover{
  color: #B9F570;
}



@media screen and (max-width: 768px) {
   .aside-wrapper{
    flex-direction: column;
    flex: 100;
    
  } 
} 
  
@media screen and (max-width: 960px){
    
    header{
      flex-direction: column;
      justify-content: space-around;
      align-items: center;
    }
} 

